# Proyecto-elearning

./: main.py  pyproject.toml
data/processed/: exams_clean.csv
notebooks/: Eda.ipynb
scripts/: aws.py  test_pyspark.py
